divorce prediction complete

--- a/DataScience/DivorceResearch.ipynb
+++ b/DataScience/DivorceResearch.ipynb
@@ -2125,7 +2125,13 @@
    "id": "bed70694",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "\n",
+    "pickle_out = open(\"divorce.pickle\", \"wb\")\n",
+    "pickle.dump(best_clf, pickle_out)\n",
+    "pickle_out.close()"
+   ]
   }
  ],
  "metadata": {
